# api/handler/category.go
@@ -6,7 +6,18 @@ import (
 	"strconv"
 	"test/api/models"
 )
-
+// CreateCategory godoc
+// @Router       /category [POST]
+// @Summary      Creates a new category
+// @Description  create a new category
+// @Tags         category
+// @Accept       json
+// @Produce      json
+// @Param        category body models.CreateCategory false "category"
+// @Success      201  {object}  models.Category
+// @Failure      400  {object}  models.Response
+// @Failure      404  {object}  models.Response
+// @Failure      500  {object}  models.Response
 func (h Handler) CreateCategory(c *gin.Context) {
 	category := models.CreateCategory{}
 
@@ -29,7 +40,18 @@ func (h Handler) CreateCategory(c *gin.Context) {
 
 	handleResponse(c, "", http.StatusCreated, createdCategory)
 }
-
+// GetCategory godoc
+// @Router       /category/{id} [GET]
+// @Summary      Gets category
+// @Description  get category by ID
+// @Tags         category
+// @Accept       json
+// @Produce      json
+// @Param        id path string true "category"
+// @Success      200  {object}  models.Category
+// @Failure      400  {object}  models.Response
+// @Failure      404  {object}  models.Response
+// @Failure      500  {object}  models.Response
 func (h Handler) GetCategory(c *gin.Context) {
 	uid := c.Param("id")
 
@@ -41,7 +63,20 @@ func (h Handler) GetCategory(c *gin.Context) {
 
 	handleResponse(c, "", http.StatusOK, category)
 }
-
+// GetCategoryList godoc
+// @Router       /category [GET]
+// @Summary      Get category list
+// @Description  get category list
+// @Tags         category
+// @Accept       json
+// @Produce      json
+// @Param        page query string false "page"
+// @Param 		 limit query string false "limit"
+// @Param 		 search query string false "search"
+// @Success      200  {object}  models.CategoryResponse
+// @Failure      400  {object}  models.Response
+// @Failure      404  {object}  models.Response
+// @Failure      500  {object}  models.Response
 func (h Handler) GetCategoryList(c *gin.Context) {
 	var (
 		page, limit int
@@ -79,6 +114,19 @@ func (h Handler) GetCategoryList(c *gin.Context) {
 	handleResponse(c, "", http.StatusOK, categories)
 }
 
+// UpdateCategory godoc
+// @Router       /category/{id} [PUT]
+// @Summary      Update category
+// @Description  update category
+// @Tags         
+// @Accept       jsoncategory
+// @Produce      json
+// @Param 		 id path string true "category_id"
+// @Param        category body models.UpdateCategory true "category"
+// @Success      200  {object}  models.Category
+// @Failure      400  {object}  models.Response
+// @Failure      404  {object}  models.Response
+// @Failure      500  {object}  models.Response
 func (h Handler) UpdateCategory(c *gin.Context) {
 	category := models.UpdateCategory{}
 	uid := c.Param("id")
@@ -105,6 +153,19 @@ func (h Handler) UpdateCategory(c *gin.Context) {
 	handleResponse(c, "", http.StatusOK, updatedCategory)
 }
 
+
+// DeleteCategory godoc
+// @Router       /category/{id} [DELETE]
+// @Summary      Delete category
+// @Description  delete category
+// @Tags         category
+// @Accept       json
+// @Produce      json
+// @Param 		 id path string true "category_id"
+// @Success      200  {object}  models.Response
+// @Failure      400  {object}  models.Response
+// @Failure      404  {object}  models.Response
+// @Failure      500  {object}  models.Response
 func (h Handler) DeleteCategory(c *gin.Context) {
 	uid := c.Param("id")
 
